[tool.poetry]
name = "Auth-Bot"
version = "1.0"
description = "A simple Discord auth bot to pull members to any server."
authors = ["ash3r https://discord.gg/encoders"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
discord-py = "^2.3.2"
fake-useragent = "^1.4.0"
flask = "^3.0.2"
jishaku = "^2.5.2"
requests = "^2.31.0"
aiohttp = "^3.9.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"